--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>2.7.4</version>
         </dependency>
 
+        <!-- Mail dependency -->
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
     </dependencies>
 
