RECOVERY POINT: i18n works

--- a/src/main/resources/myProp.properties
+++ b/src/main/resources/myProp.properties
@@ -4,6 +4,8 @@ titulo.pagina.inicio=Biblioteca - Inicio
 biblioteca.inicio=Biblioteca
 registro=Registrarse
 login=Iniciar Sesión
+saludo=Hola,
+cerrar.sesion=Cerrar Sesión
 
 #pagina inicio
 titulo.lista.libros=Lista de Libros
@@ -19,4 +21,3 @@ sin.portada=Sin Portada
 
 #footer
 footer=Biblioteca
-
