RECOVERY POINT: API REST

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
             <version>2.0.1</version>
         </dependency>
 
+        <!-- Rest API -->
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-web-api</artifactId>
+            <version>9.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
